--- a/event/index.html
+++ b/event/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
-      <form action="">
+    <div id="form_div">
+      <form id="myForm">
+        <label for="firstname">First Name</label>
+        <input type="text" name="firstname" id="firstname" /><br /><br />
         <button type="submit">Action</button>
       </form>
     </div>
