--- a/event/index.html
+++ b/event/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="form_div">
-      <form id="myForm">
-        <label for="firstname">First Name</label>
-        <input type="text" name="firstname" id="firstname" /><br /><br />
-        <button type="submit">Action</button>
-      </form>
+    <div class="products">
+      <span class="mobile">Mobiles</span>
+      <span class="books">Books</span>
+      <span class="laptops">Laptops</span>
+      <span class="pc">PC</span>
+      <span class="table">Tables</span>
+      <span class="lights">Lights</span>
     </div>
     <script src="EventPropogation.js"></script>
   </body>
